--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,5 @@ gpurunner = "gpurunner:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["gpurunner.py"]
